--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ obj/Debug/src/main.o
 obj/Debug/src/cell.o
 obj/Debug/src/game.o
 obj/Debug/src/menu_scene.o
+obj/Debug/src/linked_list.o
+obj/Debug/src/game_scene.o
+obj/Debug/src/linked_list_table.o
