--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ obj/Debug/src/menu_scene.o
 obj/Debug/src/linked_list.o
 obj/Debug/src/game_scene.o
 obj/Debug/src/linked_list_table.o
+obj/Debug/src/difficult_mode.o
