--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ obj/Debug/src/linked_list.o
 obj/Debug/src/game_scene.o
 obj/Debug/src/linked_list_table.o
 obj/Debug/src/difficult_mode.o
+obj/Debug/src/challenge_mode.o
