Redesign game system

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ obj/Debug/src/game_scene.o
 obj/Debug/src/linked_list_table.o
 obj/Debug/src/difficult_mode.o
 obj/Debug/src/challenge_mode.o
+obj/Debug/src/identify_scene.o
