Update game experience
For standard mode:
Add game-over state screen &
Fix the bug that max point didn't update when the game ended &
Game will automatically save player data when the game ended instead of manual saving  &
Update login/register validator: no backspaces in username's back &
Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ obj/Debug/src/linked_list_table.o
 obj/Debug/src/difficult_mode.o
 obj/Debug/src/challenge_mode.o
 obj/Debug/src/identify_scene.o
+obj/Debug/src/endgame_scene.o
+obj/Debug/src/player.o
