Add game saving feature

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ obj/Debug/src/challenge_mode.o
 obj/Debug/src/identify_scene.o
 obj/Debug/src/endgame_scene.o
 obj/Debug/src/player.o
+obj/Debug/src/game_saving.o
+obj/Debug/src/leaderboard_scene.o
